--- a/src/main/resources/templates/recommendation.html
+++ b/src/main/resources/templates/recommendation.html
@@ -34,7 +34,7 @@
 
 <div class="container mt-4">
     <h1>Recomendações de Vídeo</h1>
-    <input type="text" id="usuarioId" class="form-control mb-2" placeholder="Digite o ID do usuário para recomendações">
+    <input type="text" id="userId" class="form-control mb-2" placeholder="Digite o ID do usuário para recomendações">
     <button onclick="fetchRecommendations()" class="btn btn-primary mb-3">Obter Recomendações</button>
     <div id="recommendations" class="row"></div>
 </div>
@@ -46,13 +46,13 @@
 
 <script>
     function fetchRecommendations() {
-        const usuarioId = document.getElementById('usuarioId').value;
-        if (!usuarioId) {
+        const useId = document.getElementById('useId').value;
+        if (!useId) {
             alert('Por favor, insira o ID do usuário.');
             return;
         }
 
-        fetch('/video-recommendation?usuarioId=' + usuarioId)
+        fetch('/video-recommendation?usuarioId=' + useId)
             .then(response => response.json())
             .then(videos => {
                 const recommendationsDiv = document.getElementById('recommendations');
@@ -69,9 +69,9 @@
                         videoDiv.innerHTML = `
                             <div class="card">
                                 <div class="card-body">
-                                    <h5 class="card-title">${video.titulo}</h5>
-                                    <p class="card-text">${video.descricao}</p>
-                                    <p class="card-text"><small class="text-muted">Publicado em: ${video.dataPublicacao}</small></p>
+                                    <h5 class="card-title">${video.title}</h5>
+                                    <p class="card-text">${video.description}</p>
+                                    <p class="card-text"><small class="text-muted">Publicado em: ${video.publicationDate}</small></p>
                                 </div>
                             </div>
                         `;
