--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -141,7 +141,7 @@
         <div class="mb-3">
             <label for="category">Categoria:</label>
             <select id="category" name="category" class="form-select">
-                <option th:each="categoriy : ${T(com.fase4FIAP.streaming.domain.enums.Category).values()}"
+                <option th:each="category : ${T(com.fase4FIAP.streaming.domain.enums.Category).values()}"
                         th:value="${category}" th:text="${category.getCategoryName()}"></option>
             </select>
         </div>
