test: finished tests repository

--- a/src/main/resources/templates/favorite.html
+++ b/src/main/resources/templates/favorite.html
@@ -52,7 +52,7 @@
             return;
         }
 
-        fetch('/favorites-videos/?userId=' + userId)
+        fetch('/favorites-videos?userId=' + userId)
             .then(response => response.json())
             .then(favorites => {
                 const favoritesDiv = document.getElementById('favoritesList');
